<resources>
    <string name="app_name">MAD_project</string>
    <string name="main_heading">Welcome !!</string>
    <string name="main_topic">RUSH ADVERTISING</string>
    <string name="Advertising_moto">Outdoor and Indoor Advertising</string>
    <string name="login_heading">LOGIN HERE</string>
    <string name="log_username">Username :</string>
    <string name="log_password">Password :</string>
    <string name="register">Are you not Register?</string>
    <string name="reg">Register</string>
    <string name="login">LOGIN</string>
    <string name="register_head">Register</string>
    <string name="name">User Name:</string>
    <string name="password">Password:</string>
    <string name="contact">Contact No:</string>
    <string name="email">E-mail :</string>
    <string name="address">Adderss  :</string>
    <string name="conf_password">Confirm Password :</string>
    <string name="registerbtn">REGISTER</string>
    <string name="areYou">Who are you?</string>
    <string name="admin">Admin</string>
    <string name="employee">Employer</string>
    <string name="customer">Customer</string>
    <string name="adimin_heading">Welcome Admin</string>
    <string name="admin_name">User Name :</string>
    <string name="add_emp">Add Employers</string>
    <string name="payments">Add Employers Payments</string>
    <string name="works">Add Employee Works</string>
    <string name="dayWork">Employee-Day-to-Day-Work</string>
    <string name="salary">Employee-Salay-Details</string>
    <string name="date">Date</string>
    <string name="emp_heading">Employee Login</string>
    <string name="employee_name">User Name :</string>
    <string name="emp_password">Password :</string>
    <string name="emp_login">Login</string>
    <string name="salary_heading">Employee Salary Details</string>
    <string name="Emp_Sala_Name">Name </string>
    <string name="Basic_Salary">Basic salary </string>
    <string name="Trav_allow">Travelling Allowance</string>
    <string name="Over_time">Over Time</string>
    <string name="Sal_advance">Salary Advance</string>
    <string name="Net_sal">Net Salary</string>
    <string name="Sal_add">ADD</string>
    <string name="Sal_update">UPDATE</string>
    <string name="Sal_del">DELETE</string>
    <string name="hello">Hello</string>
    <string name="heading_view_salary">This is your salary</string>
    <string name="sal_view_name">Name</string>
    <string name="sal_view_basic">Basic Salary</string>
    <string name="sal_view_trav">Travelling Allowance</string>
    <string name="sal_view_ovrTi">Over Time</string>
    <string name="sal_view_adva">Salary Advance</string>
    <string name="sal_view_net">Net Salary</string>
    <string name="back">Back</string>
    <string name="log_out">Log Out</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="day_work">Day To Day Work</string>
    <string name="customer_profile_heading">My Profile</string>
    <string name="profile_username">User Name</string>
    <string name="pro_email">Email</string>
    <string name="pro_contact">Contact</string>
    <string name="pro_address">Address</string>
    <string name="cus_pro_edit">EDIT</string>
    <string name="select_products">You are Selected these Items</string>
    <string name="creation">Our Creations</string>
    <string name="cust_choise_head">What is your Choice?</string>
    <string name="btn_banner">Banners</string>
    <string name="btn_leaflet">Leaflet</string>
    <string name="btn_lightb">Light Board</string>
    <string name="btn_nameboard">Name Board</string>
    <string name="bannerSize">Size</string>
    <string name="bannerLength">Length :</string>
    <string name="bannerWidth">Width :</string>
    <string name="BannerSample">Sample Images</string>
    <string name="browse">Upload Image</string>
    <string name="image">banner.png</string>
    <string name="bannerdescription">Description :</string>
    <string name="bannerheading">Banner Details</string>
    <string name="bnDes">How we design Your Creation?</string>
    <string name="toolbar">RUSH ADVERTISING</string>
    <string name="bannerDate">Date Of Need :</string>
    <string name="oneBanner">Price Of One Banner</string>
    <string name="cal">Calculate</string>
    <string name="price">Amount</string>
    <string name="btn_next">NEXT</string>
    <string name="Bannerqty">Quantity :</string>
    <string name="Total">Total Amount :</string>
    <string name="show">show</string>
    <string name="del_date">Delivery Date:</string>
    <string name="getting_type">How to get the Creations?</string>
    <string name="del_take">Delivery Or Taking</string>
    <string name="btn_addD">Add details</string>
    <string name="Leaflet_head">Leaflet Details</string>
    <string name="leaflet_price">Total price of Leaflets:</string>
    <string name="image_url">Enter the images driver URL :</string>
    <string name="nameboard_haed">Name Board Details</string>
    <string name="lighboard_head">Light Board Details</string>
    <string name="logout">LOGOUT</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is Channel 1</string>
    <string name="view_details">View Details</string>
    <string name="Search_Emp_Salary">Salary Searching</string>
    <string name="Salary_Name_Search">Search</string>
    <string name="Salary_Delete">DELETE</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="NIC">NIC</string>
    <string name="empID">Employee ID</string>
    <string name="empType">Employee Type</string>
    <string name="fname" />
    <string name="lname" />
    <string name="e_mail" />
    <string name="addres" />
    <string name="phone" />
    <string name="nic" />
    <string name="empid" />
    <string name="emptype" />
    <string name="addemp">ADD EMPLOYEE</string>
    <string name="addemployee">ADD</string>
    <string name="thoughtHead">What is your thought ??</string>
    <string name="thought_email">User Email :</string>
    <string name="rate">Ratting :</string>
    <string name="thought">Thought :</string>
    <string name="submit">submit</string>
    <string name="cancel">cancel</string>
    <string name="profEdit_head">Edit Profile</string>
    <string name="update">update profile</string>
    <string name="edit_user">customer username :</string>
    <string name="creationHead">Update Creation Details</string>
    <string name="enterID">Select the Creation ID</string>
    <string name="view" />
    <string name="VIEW">VIEW</string>
    <string name="emEmail">Email</string>
    <string name="eAddr">Address</string>
    <string name="con">Contact No</string>
    <string name="empType1">Employee Type</string>
    <string name="Update_Salary">SALARY UPDATE</string>
    <string name="delete_creation">Creation Delete</string>
    <string name="delete">Sure, Are you want to Delete Your Creation ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile_picture_Upload">Profile picture Upload</string>
    <string name="deleteUser">User Account Delete</string>
    <string name="deleteUserAcc">Sure, Are you want to Delete Your Account ?</string>
    <string name="Date">Date :</string>
    <string name="workSearch">Search Employee Works</string>
    <string name="EnterNIC">Enter NIC</string>
    <string name="Search">Search</string>
    <string name="empName">Employee Name</string>
    <string name="WorkDescription">Work Description</string>
    <string name="location">Location</string>
    <string name="updte">Update Employee Works</string>
    <string name="updat">UPDATE</string>
    <string name="delet">Delete</string>
    <string name="addnewwork">ADD NEW WORK</string>
    <string name="empname">Employee Name :</string>
    <string name="workdes">Work Description :</string>
    <string name="locatio">Location</string>
    <string name="addworks">ADD DAY TO  DAY WORKS</string>
    <string name="searview">Search Works</string>

</resources>
