<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Banner">

    <TextView
        android:id="@+id/textView46"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:text="@string/bannerSize"
        android:textColor="#008ecc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView52"
        app:layout_constraintVertical_bias="0.059" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="17dp"
        android:layout_height="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="@drawable/ic_send_black_24dp" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="59dp"
        android:layout_height="20dp"
        android:text="@string/bannerLength"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView46"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editTextBannerLen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/textView47" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="19dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/ic_send_black_24dp" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="62dp"
        android:layout_height="18dp"
        android:text="@string/bannerWidth"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView47"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/editTextBannerWid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toEndOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BannerSample"
        android:textColor="#008ecc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/button"
        android:layout_width="168dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/browse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="181dp"
        android:layout_height="33dp"
        android:hint="@string/image"
        android:textColorHighlight="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bannerdescription"
        android:textColor="#008ecc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="220dp"
        android:layout_height="39dp"
        android:text="@string/bannerheading"
        android:textColor="#800000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/editText26"
        android:layout_width="377dp"
        android:layout_height="161dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView53"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="166dp"
        android:layout_height="29dp"
        android:text="@string/bnDes"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/button7"
        android:layout_width="99dp"
        android:layout_height="49dp"
        android:background="@drawable/btn_add"
        android:text="@string/Sal_add"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText26"
        app:layout_constraintVertical_bias="0.445" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:background="@drawable/btn_update"
        android:text="@string/Sal_update"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/editText26"
        app:layout_constraintVertical_bias="0.455" />

    <Button
        android:id="@+id/button9"
        android:layout_width="96dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_delete"
        android:text="@string/Sal_del"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/editText26"
        app:layout_constraintVertical_bias="0.342" />

</androidx.constraintlayout.widget.ConstraintLayout>